<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath/>
    </parent>

    <groupId>com.nageoffer.ai</groupId>
    <artifactId>springai-rag</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>springai-rag</name>
    <description>基于 Spring AI 1.1 的 RAG 文档入库与问答（ragent 的 Spring AI 重写版）</description>

    <modules>
        <module>rag-common</module>
        <module>rag-core</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-ai.version>1.1.2</spring-ai.version>
        <!-- OpenTelemetry instrumentation 组件（logback appender 等）版本统一收口；不引 BOM 以免覆盖 Boot 管理的 OTel 核心版本 -->
        <opentelemetry.instrumentation.version>2.15.0-alpha</opentelemetry.instrumentation.version>
        <mybatis-plus.version>3.5.14</mybatis-plus.version>
        <rocketmq-spring.version>2.3.5</rocketmq-spring.version>
        <knife4j.version>4.5.0</knife4j.version>
        <hutool-all.version>5.8.37</hutool-all.version>
        <okhttp.version>4.12.0</okhttp.version>
        <commonmark.version>0.22.0</commonmark.version>
        <redisson.version>3.45.1</redisson.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 内部模块 -->
            <dependency>
                <groupId>com.nageoffer.ai</groupId>
                <artifactId>rag-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nageoffer.ai</groupId>
                <artifactId>rag-core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Lombok：所有模块共享 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- Test：所有模块共享 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
